# quantlab_data_pipeline_api

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: pipeline_demo.ipynb
quantlab_data_pipeline/: __init__.py  config_loader.py  failure_utils.py  final_data.py  ingestion.py  paths.py  quality.py  transform.py  wrds_client.py
